--- a/package.json
+++ b/package.json
@@ -29,18 +29,21 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tailwindcss/typography": "0.5.10",
     "@types/bcrypt": "^5.0.2",
     "@upstash/ratelimit": "^1.2.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.23.3",
     "@vercel/kv": "^2.0.0",
     "ai": "^3.2.0",
+    "autoprefixer": "10.4.17",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "0.2.1",
     "eventsource-parser": "^1.1.2",
     "highlight.js": "^11.9.0",
+    "lottie-react": "^2.4.0",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
@@ -53,6 +56,7 @@
     "react-aria": "^3.33.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-stately": "^3.31.1",
     "sonner": "^1.5.0",
