--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "use-debounce": "^10.0.1",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
