--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "prosemirror-model": "^1.8.2"
+  },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.31",
     "@ai-sdk/react": "^0.0.3",
     "@hookform/resolvers": "^3.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.1",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -32,8 +36,16 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tailwindcss/typography": "0.5.10",
     "@tanstack/react-table": "^8.19.2",
+    "@tiptap/extension-image": "^2.5.2",
+    "@tiptap/extension-link": "^2.5.2",
+    "@tiptap/html": "^2.5.3",
+    "@tiptap/pm": "^2.5.2",
+    "@tiptap/react": "^2.5.2",
+    "@tiptap/starter-kit": "^2.5.2",
     "@types/bcrypt": "^5.0.2",
     "@upstash/ratelimit": "^1.2.1",
     "@vercel/analytics": "^1.3.1",
@@ -46,6 +58,8 @@
     "clsx": "^2.1.1",
     "cmdk": "0.2.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
     "eventsource-parser": "^1.1.2",
     "highlight.js": "^11.9.0",
     "lottie-react": "^2.4.0",
@@ -59,6 +73,7 @@
     "openai": "^4.52.0",
     "react": "^18",
     "react-aria": "^3.33.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
@@ -82,6 +97,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
