--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -22,9 +18,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
@@ -34,9 +28,9 @@
     ".next/types/**/*.ts",
     "scripts/data.js",
     "scripts/seed.js",
-    "src/app/admin/courses/[courseId]/exams/page.tsx.backup"
+    "src/app/admin/courses/[courseId]/exams/page.tsx.backup",
+    "src/app/auth/signin/page.tsx.backup",
+    "src/app/student/dashboard/page.tsx.backup"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
